# MandelbrotGL64f

./: CMakeLists.txt  mand_fs.glsl  mandelbrot.c  screen_quad_gs.glsl  screen_quad_vs.glsl
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
